* Allowed switching workplaces by scrolling over the pager.
* Added new API: lxpanel_draw_label_text_with_color().
* Fixed not-applicable font setting on thermal plugin.
* Fixed crash on right-click task button after some task was killed using menu
    on another task button.
* Fixed crash after color was removed from monitor plugin configuration.

0.9.3
-------------------------------------------------------------------------
* Finally fixed battery calculations, it missed Power so left time was
    always at zero.
* Fixed task window raising on drop file on it (was broken since 0.9.0).

0.9.2
-------------------------------------------------------------------------
* Fixed battery selection if battery detached but another is available.
* Fixed battery percentage calculations if charge isn't available but
    energy is, it appears broken in 0.9.0.
* Fixed wrong state change on task button when hovered, it shouldn't
    receive selected state until window has urgency.
* Fixed wrong flat button appearance when hovered, it wasn't flat.

0.9.1
-------------------------------------------------------------------------
* Fixed build failure without ALSA.
* Added alternative mixers if build using OSS.
* Fixed panel flicker with some window managers.

0.9.0
-------------------------------------------------------------------------
* Added support for laptops with multiple batteries.
* Added a way to scroll through workspaces by using the scroll wheel over
    the deskno plugin.
* Bunch of fixes for GTK+ 3.0 compatibility.
* Fixed outdated lxpanel man page.
* Fixed weather locations query (since YQL was changed recently).
* Converted space plugin into internal PanelSpace widget in liblxpanel.
* Converted task button into widget class to avoid ambiguous code.
* Added support for third-party plugins localized descriptions.
* Implemented "lxpanelctl command ..." to send message to panel plugin.
* Added APIs for PanelIconGrid to draw focus on drop.