@@ -21,6 +21,7 @@ LXPanel - Lightweight X11 desktop panel
     Stanislav Kozina, Ersin <xersin@users.sf.net>
     Mamoru TASAKA <mtasaka@fedoraproject.org>
     number Zero <numzero@users.sf.net>
+    Carles Pina i Estany <carles@pina.cat>
 
 [History]
 LXPanel is a derivative work from fbpanel [1] written by Anatoly Asviyan,
